Change by MonoDevelop.

--- a/TmlGUI/TmlGUI.csproj
+++ b/TmlGUI/TmlGUI.csproj
@@ -29,6 +29,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="DxLibDotNet">
+      <HintPath>..\..\DxLibDotNet\DxLibDotNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyClass.cs" />
